--- a/.github/workflows/api-lint.yml
+++ b/.github/workflows/api-lint.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: 'latest'
+        node-version: 'v20.12.0'
 
     - name: Install tsp 
       run: npm install -g @typespec/compiler@0.51.0
