--- a/.github/workflows/api-lint.yml
+++ b/.github/workflows/api-lint.yml
@@ -20,6 +20,9 @@ jobs:
       uses: actions/setup-node@c2ac33f2c62f978d6c944d9648125a294e56dc0b # v4.0.2
       with:
         node-version: 'v20.12.0'
+    
+    - name: Install tsp
+      run: npm install -g @typespec/compiler@0.51.0
 
     - name: Install dependencies
       run: npm install 
