--- a/.github/workflows/api-lint.yml
+++ b/.github/workflows/api-lint.yml
@@ -25,7 +25,7 @@ jobs:
       run: npm install -g @typespec/compiler@0.51.0
 
     - name: Install dependencies
-      run: npm install 
+      run: npm ci 
 
     - name: Install oav 
       run: npm install -g autorest@3.7.1
